add sun and moon svgs

--- a/test/style.css
+++ b/test/style.css
@@ -2,3 +2,11 @@
     height: 50px;
     width: 200px;
 }
+
+#moon:hover {
+   fill: rgb(232, 102, 26);
+}
+
+#sun:hover {
+   fill: rgb(246, 244, 23);
+}
