--- a/test/style.css
+++ b/test/style.css
@@ -19,6 +19,11 @@ body {
     margin-bottom: 5em;
 }
 
+#lap-container {
+    font-size: 1.5em;
+    font-family: droid sans mono;
+}
+
 .btn {
     height: 100px;
     width: 100px;
@@ -28,6 +33,11 @@ body {
     border-radius: 200px;
     margin: 0 4.2em;
     transition: 0.3s ease;
+    outline: none;
+}
+
+.hide-btn {
+    display: none;
 }
 
 #start:hover {
