--- a/test/style.css
+++ b/test/style.css
@@ -15,13 +15,12 @@ body {
     font-family: droid sans mono;
 }
 
-#button-container {
-    margin-bottom: 5em;
-}
 
 #lap-container {
     font-size: 1.5em;
     font-family: droid sans mono;
+    margin: 1.5em 0;
+    min-height: 1px;
 }
 
 .btn {
@@ -36,6 +35,7 @@ body {
     transition: 0.3s ease;
     outline: none;
 }
+
 
 .hide-btn {
     display: none;
