--- a/style.css
+++ b/style.css
@@ -28,6 +28,9 @@ body {
 
 #app {
     width: 100%;
+    height: 100%;
+    position: fixed;
+    top: -5em;
     margin: 5em auto;
     text-align:center;
     color: #fff;
