--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 body {
     background-color: #96C5FF;
     transition: background-color 1s ease;
+    margin: 0;
+}
+
+h2 {
+    margin-top: 0;
+    padding-top: 0.83em;
 }
 
 .stars {
@@ -28,7 +34,6 @@ body {
 
 #app {
     width: 100%;
-    margin: 5em auto;
     text-align:center;
     color: #fff;
 }
